Allow dynamic CORS origins via ALLOWED_ORIGINS variable